# GutServer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  error.txt  gutserver.cpp  gutserver.hpp  gutweb.cpp  gutweb.hpp  serverAPI_format.md  stockapi.py
networksec/: baseSocket.cpp  baseSocket.hpp  socket.cpp  socket.hpp  tcpSocket.cpp  tcpSocket.hpp  tcp_socket.cpp  tcp_socket.hpp  udpSocket.cpp
src/: gutweb.cpp  gutweb.hpp  libraries.hpp  server.cpp  server.hpp
src/core/: db_utilities.cpp  db_utilities.hpp  list_db_helper.cpp  list_db_helper.hpp  message.cpp  message.hpp  price_data_db_helper.cpp  price_data_db_helper.hpp  ticker_list_db_helper.cpp  ticker_list_db_helper.hpp  user_db_helper.cpp  user_db_helper.hpp  user_orders_table_helper.cpp  user_orders_table_helper.hpp  yfinance_fetcher.cpp  yfinance_fetcher.hpp
src/handlersec/: authedClient.hpp  client.hpp  message.cpp  message.hpp  task.hpp  worker.hpp
src/logic/: CancelTickerStream.cpp  CancelTickerStream.hpp  FetchWatchlistsTask.cpp  FetchWatchlistsTask.hpp  GetBalance.cpp  GetBalance.hpp  GetTickerInfo.cpp  GetTickerInfo.hpp  GetWatchlistContentTask.cpp  GetWatchlistContentTask.hpp  HandshakeHello.cpp  HandshakeHello.hpp  HandshakeVerify.cpp  HandshakeVerify.hpp  LoginTask.cpp  LoginTask.hpp  ManageWatchlistTask.cpp  ManageWatchlistTask.hpp  ModifyWatchlistItemsTask.cpp  ModifyWatchlistItemsTask.hpp  RequestTickerData.cpp  RequestTickerData.hpp  SearchTicker.cpp  SearchTicker.hpp  SendOrder.cpp  SendOrder.hpp  endOrder.cpp  endOrder.hpp  fetchorders.cpp  fetchorders.hpp  registerTask.cpp  registerTask.hpp  task.cpp  task.hpp  taskFactory.cpp  taskFactory.hpp
src/networksec/: CMakeLists.txt  baseSocket.cpp  baseSocket.hpp  tcpSocket.cpp  tcpSocket.hpp  udpSocket.cpp  udpSocket.hpp
src/program/: gutweb.cpp  gutweb.hpp  server.cpp  server.hpp
src/runtime/: client.cpp  client.hpp  worker.cpp  worker.hpp
src/stateless/: baseSocket.hpp  crypto.cpp  crypto.hpp  messageCodec.cpp  messageCodec.hpp  stock_db_helper.cpp  stock_db_helper.hpp  streamer.cpp  streamer.hpp  tcpSocket.cpp  tcpSocket.hpp  udpSocket.hpp
src/stockapi/: fetchdb.py  stockapi.py
stockapi/: fetchdb.py  stockapi.py
test/: testclient.py
